# matrix-appservice

./: Cargo.toml  LICENSE_MIT  README.md
src/: appservice.rs  lib.rs
src/appservice/: builder.rs  device.rs  encryption.rs  error.rs  event_handler.rs  handler.rs  http_client.rs  room.rs  transaction.rs  types.rs  user.rs
