[package]
name = "matrix-appservice"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Gideon Bleumink <gideon@spacebased.nl>"]


[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
matrix-sdk = { version = "0.13.0", features = ["markdown"] }
matrix-sdk-sqlite = "0.13.0"
reqwest = { version = "0.12.21", features = ["json", "rustls-tls-native-roots"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v5"] }
